[package]
name = "bomberust-server"
version = "0.1.0"
authors = ["Sébastien Blin <sebastien.blin@enconn.fr>"]
edition = "2018"

[dependencies]
env_logger = "0.5.6"
log = "0.4.1"
futures="0.1.28"
rand="0.7"
rmp-serde = "0.14.0"
typetag = "0.1"
serde = "1.0.99"
serde_derive = "1.0.99"
tokio = { version = "0.1.6" }
tokio-rustls="0.10"

serde_json = "*"
